# big-gaming

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  x.py
client/: ARCHITECTURE.md  Cargo.toml  Makefile  projectiles.json
client/src/: components.rs  entities.rs  hotkeys.rs  log.rs  main.rs  window.rs
client/src/bundles/: mod.rs  object.rs  physics.rs  transform.rs  visibility.rs
client/src/components/: settings.rs
client/src/entities/: actor.rs  item.rs  player.rs  projectile.rs
client/src/plugins/: camera.rs  combat.rs  hotkeys.rs  interactions.rs  mod.rs  movement.rs  projectile.rs  respawn.rs
client/src/sky/: mod.rs
client/src/systems/: combat.rs  input.rs  world.rs
client/src/ui/: crosshair.rs  cursor.rs  debug.rs  events.rs  gun.rs  health.rs  interaction.rs  interfaces.rs  mod.rs
client/src/utils/: mod.rs
client/src/world/: chunk.rs  mod.rs
common/: Cargo.toml
common/src/: components.rs  id.rs  lib.rs  module.rs
common/src/archive/: archive.rs  component.rs  items.rs  json.rs  mod.rs  objects.rs
common/src/bundles/: actor.rs  combat.rs  mod.rs  projectile.rs  transform.rs  visibility.rs
common/src/components/: actor.rs  animation.rs  character.rs  combat.rs  entity.rs  faction.rs  interaction.rs  inventory.rs  items.rs  mod.rs  movement.rs  object.rs  player.rs  projectile.rs  transform.rs
common/src/data/: mod.rs
common/src/ecs/: mod.rs
common/src/id/: strong.rs  weak.rs
common/src/inventory/: mod.rs
common/src/math/: mod.rs  (+1 more)
game_ai/: Cargo.toml
game_ai/src/: actions.rs  bundles.rs  lib.rs  sense.rs  thinker.rs
game_audio/: Cargo.toml
game_audio/src/: buffer.rs  channel.rs  clock.rs  lib.rs  main.rs  manager.rs  queue.rs  resampler.rs  ring_buf.rs  sound.rs  sound_data.rs  source.rs  track.rs
game_audio/tests/: basic.rs
game_client/: Cargo.toml  Makefile  config.toml
game_client/src/: components.rs  config.rs  input.rs  main.rs  prev_transform.rs  scene.rs  systems.rs  window.rs
game_common/: Cargo.toml
game_common/benches/: lru.rs
game_common/src/: cell.rs  color.rs  entity.rs  events.rs  hex.rs  id.rs  lib.rs  metrics.rs  module.rs  record.rs  reflection.rs  scene.rs  utils.rs  uuid.rs
game_core/: Cargo.toml
game_core/src/: ai.rs  command.rs  counter.rs  dirs.rs  entity.rs  hierarchy.rs  lib.rs  logger.rs  time.rs  transform.rs
game_core_pipeline/: Cargo.toml
game_core_pipeline/shaders/: barycentrics.slang  camera.slang  forward_frag.slang  forward_fs.wgsl  forward_mesh.slang  forward_task.slang  forward_vs.slang  forward_vs.wgsl  lights.slang  material.slang  pbr.slang  pbr.wgsl  post_process.wgsl  types.slang
game_core_pipeline/src/: camera.rs  entities.rs  lib.rs  lights.rs  material.rs
game_crash_handler/: Cargo.toml
game_crash_handler/src/: dialog.rs  lib.rs
game_data/: Cargo.toml
game_data/src/: header.rs  lib.rs  record.rs  uri.rs  varint.rs
game_editor/: Cargo.toml
game_editor/src/: backend.rs  main.rs  scene.rs
game_gizmos/: Cargo.toml
game_gizmos/shaders/: line.wgsl
game_gizmos/src/: lib.rs
game_gltf/: Cargo.toml
game_gltf/src/: accessor.rs  image.rs  lib.rs  material.rs  mesh.rs  mime.rs  scene.rs  types.rs  uri.rs
game_macros/: Cargo.toml
game_macros/src/: crash_handler.rs  lib.rs  proto.rs
game_model/: Cargo.toml
game_model/src/: buffer.rs  compression.rs  lib.rs  material.rs  mesh.rs  parser.rs  textures.rs  vertex.rs
game_net/: Cargo.toml
game_net/src/: backlog.rs  buffer.rs  conn.rs  entity.rs  frame.rs  host.rs  lib.rs  message.rs  output.rs  request.rs  serial.rs  snapshot.rs  socket.rs  stream.rs  timestamp.rs  validator.rs  world.rs
game_net/tests/: conn.rs
game_physics/: Cargo.toml
game_physics/src/: control.rs  convert.rs  data.rs  handle.rs  lib.rs  query.rs
game_prefab/: Cargo.toml
game_prefab/src/: format.rs  lib.rs
game_render/: Cargo.toml
game_render/shaders/: directional_light.wgsl  forward_fs.wgsl  forward_vs.wgsl  mipmap.wgsl  pbr_params.wgsl  point_light.wgsl  post_process.wgsl  shadow_vs.wgsl  taa.wgsl  z_prepass.wgsl
game_render/slangc/: Cargo.toml  build.rs
game_render/src/: aabb.rs  allocator.rs  buffer.rs  camera.rs  color.rs  debug.rs  depth_stencil.rs  entities.rs  events.rs  final_pass.wgsl  forward.rs  fps_limiter.rs  graph.rs  image.rs  layout.rs  lib.rs  lighting_pass.wgsl  main.rs  material.rs  material.wgsl  mesh.rs  mesh.wgsl  metrics.rs  mipmap.rs  options.rs  pipeline.rs  pipeline_cache.rs  pipelined_rendering.rs  point_light.wgsl  post_process.rs  render_pass.rs  scene.rs  shader.wgsl  shadow.rs  shadow_depth_pass.wgsl  state.rs  statistics.rs  style.rs  surface.rs  text.rs  (+4 more)
game_render_test/: Cargo.toml
game_render_test/src/: main.rs
game_scene/: Cargo.toml
game_scene/src/: debug.rs  format.rs  gltf.rs  lib.rs  loader.rs  model.rs  scene.rs  scene2.rs  spawner.rs
game_scene2/: Cargo.toml
game_scene2/src/: lib.rs
game_script/: Cargo.toml
game_script/src/: abi.rs  actions.rs  dependencies.rs  dependency.rs  effect.rs  events.rs  executor.rs  instance.rs  lib.rs  plugin.rs  queue.rs  script.rs  scripts.rs
game_server/: Cargo.toml  config.toml  world.json
game_server/src/: command.rs  config.rs  conn.rs  entity.rs  lib.rs  main.rs  server.rs  snapshot.rs  state.rs
game_tasks/: Cargo.toml
game_tasks/benches/: spawn.rs
game_tasks/src/: lib.rs  linked_list.rs  loom.rs  park.rs  task.rs  waker.rs
game_tracing/: Cargo.toml
game_tracing/src/: allocator.rs  layer.rs  lib.rs  span.rs
game_ui/: Cargo.toml
game_ui/benches/: layout.rs
game_ui/shaders/: ui.wgsl
game_ui/src/: clipboard.rs  cursor.rs  events.rs  interface.rs  lib.rs  main.rs  primitive.rs  runtime_v2.rs  style.rs  systems.rs
game_ui_test/: Cargo.toml
game_ui_test/src/: main.rs
game_wasm/: Cargo.toml
game_wasm/src/: action.rs  cell.rs  component.rs  components.rs  encoding.rs  entity.rs  events.rs  hierarchy.rs  host_buffer.rs  inventory.rs  lib.rs  log.rs  math.rs  panic.rs  physics.rs  player.rs  prefab.rs  process.rs  record.rs  resource.rs  system.rs  world.rs
(+723 files in other folders)
