[workspace]
members = [
    "game_ai",
    "game_audio",
    "game_core",
    "game_common",
    "game_client",
    "game_server",
    "game_ui",
    "game_net",
    "game_input",
    "game_macros",
    "game_editor",
    "game_physics",
    "game_data",
    "game_script",
    "game_wasm",
    "game_render",
    "game_window",
    "game_asset",
    "game_gltf",
    "game_scene",
    "game_worldgen",
    "game_model",
    "game_tracing",
    "game_tasks",
    # TODO: Figure out how to move these to a separate
    # workspace.
    "mods/core/scripts/*",
    "tools/json2dat",
    "tools/gltf2model",
    "tools/make",
]

resolver = "2"
