[package]
name = "gigagame-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }

ahash = "0.8.2"
bevy = { version = "0.9.0", features = ["wav"] }
bevy_rapier3d = { version = "0.19.0", features = ["debug-render"]}
serde = { version = "1.0.149", features = ["derive"], optional = true }
bevy_egui = "0.17"
winit = "0.27.5"

[features]
default = ["dynamic"]


# dylib bevy for dev
dynamic = ["bevy/dynamic"]

serde = ["dep:serde"]
simd = ["bevy_rapier3d/simd-nightly"]

[profile.release]
debug-assertions = true
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3
