[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]

# Enable serde impls
"serde" = ["dep:serde"]

[dependencies]
ahash = "0.8.2"
bevy_ecs = "0.9.1"
glam = "0.22.0"
hex = "0.4.3"
tracing = "0.1.37"

serde = { version = "1.0.151", features = ["derive"], optional = true }
rand = "0.8.5"
snowflaked = { version = "0.1.8", features = ["sync"] }
bytes = "1.3.0"
