[package]
name = "game_ai"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_core = { version = "0.1.0", path = "../game_core" }

bevy_ecs = "0.10.0"
bevy_app = "0.10.0"
glam = "0.24.0"
