[package]
name = "game_audio"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }

tracing = "0.1.37"
glam = "0.23.0"
cpal = "0.15.2"
symphonia = "0.5.3"
slotmap = "1.0.6"
parking_lot = "0.12.1"
thiserror = "1.0.48"

[[test]]
name = "latency"
path = "tests/latency/latency.rs"

[[test]]
name = "basic"
path = "tests/basic.rs"
