[package]
name = "game_audio"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

tracing = "0.1.40"
glam = "0.28.0"
cpal = "0.15.3"
symphonia = "0.5.4"
parking_lot = "0.12.3"
thiserror = "1.0.61"
rubato = "0.15.0"

[[test]]
name = "latency"
path = "tests/latency/latency.rs"

[[test]]
name = "basic"
path = "tests/basic.rs"
