[package]
name = "game_client"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_core = { version = "0.1.0", path = "../game_core" }
game_net = { version = "0.1.0", path = "../game_net" }
game_render = { version = "0.1.0", path = "../game_render" }
game_window = { version = "0.1.0", path = "../game_window" }
game_scene = { version = "0.1.0", path = "../game_scene" }
game_input = { version = "0.1.0", path = "../game_input" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_data = { version = "0.1.0", path = "../game_data" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }
game_script = { version = "0.1.0", path = "../game_script" }
game_physics = { version = "0.1.0", path = "../game_physics" }
game_ui = { version = "0.1.0", path = "../game_ui" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }
game_gizmos = { version = "0.1.0", path = "../game_gizmos" }

ahash = "0.8.2"
serde = { version = "1.0.149", features = ["derive"] }
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
clap = { version = "4.1.6", features = ["derive"] }
glam = "0.24.0"
toml = "0.7.6"
thiserror = "1.0.56"
parking_lot = "0.12.1"

[features]
default = []

serde = []

[profile.release]
debug-assertions = false
opt-level = 3
lto = "fat"
codegen-units = 1
