[package]
name = "game_common"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["serde", "json"]

# Enable serde impls
serde = ["dep:serde"]

# Archive loading of json files.
json = ["serde", "dep:serde_json"]

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros" }

ahash = "0.8.2"
bevy_ecs = "0.10.0"
glam = "0.23.0"
hex = "0.4.3"
tracing = "0.1.37"
rand = "0.8.5"
snowflaked = { version = "0.1.8", features = ["sync"] }
bytes = "1.3.0"

serde = { version = "1.0.151", features = ["derive"], optional = true }
serde_json = { version = "1.0.91", optional = true }
parking_lot = "0.12.1"
bevy_transform = "0.10.0"
bevy_rapier3d = "0.21.0"
indexmap = "1.9.2"
bevy_scene = "0.10.0"
bevy_asset = "0.10.0"
bevy_hierarchy = "0.10.0"
bevy_render = "0.10.0"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["serde", "fast-rng"] }
noise = "0.8.2"
bevy_pbr = "0.10.0"
image = "0.24.5"
