[package]
name = "game_common"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["serde"]

# Enable serde impls
serde = ["dep:serde"]

[dependencies]
ahash = "0.8.2"
glam = "0.24.0"
hex = "0.4.3"
tracing = "0.1.37"
bytes = "1.3.0"

serde = { version = "1.0.151", features = ["derive"], optional = true }
indexmap = "1.9.2"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["serde", "fast-rng", "v4"] }
noise = "0.8.2"
image = "0.24.5"
bytemuck = { version = "1.13.1", features = ["derive"] }
num-traits = "0.2.15"
