[package]
name = "game_core"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_ai = { version = "0.1.0", path = "../game_ai" }
game_common = { version = "0.1.0", path = "../game_common" }
game_audio = { version = "0.1.0", path = "../game_audio" }
game_net = { version = "0.1.0", path = "../game_net" }

bevy = "0.10.0"
bevy_ecs = "0.10.0"
tracing = "0.1.37"
bevy_rapier3d = "0.21.0"
