[package]
name = "game_core"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_ai = { version = "0.1.0", path = "../game_ai" }
game_common = { version = "0.1.0", path = "../game_common" }
game_audio = { version = "0.1.0", path = "../game_audio" }
game_net = { version = "0.1.0", path = "../game_net" }
game_data = { version = "0.1.0", path = "../game_data" }
game_script = { version = "0.1.0", path = "../game_script" }
game_asset = { version = "0.1.0", path = "../game_asset" }

bevy_ecs = "0.10.0"
bevy_app = "0.10.0"
tracing = "0.1.37"
chrono = "0.4.24"
parking_lot = "0.12.1"
atty = "0.2.14"
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "1.0.40"
glam = "0.24.0"
