[package]
name = "game_core"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_data = { version = "0.1.0", path = "../game_data" }
game_script = { version = "0.1.0", path = "../game_script" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }
game_gizmos = { version = "0.1.0", path = "../game_gizmos" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

tracing = "0.1.40"
chrono = "0.4.38"
parking_lot = "0.12.3"
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
slotmap = "1.0.7"
glam = "0.28.0"
async-io = "2.3.3"

tracing-subscriber = "0.3.18"

[target.'cfg(unix)'.dependencies]
rustix = "0.38.37"
