[package]
name = "game_core_pipeline"
version = "0.1.0"
edition = "2024"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_render = { version = "0.1.0", path = "../game_render" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_common = { version = "0.1.0", path = "../game_common" }

bytemuck = { version = "1.16.1", features = ["derive", "must_cast"] }
glam = { version = "0.28.0", features = ["bytemuck"] }
crossbeam = "0.8.4"
parking_lot = "0.12.3"
bitflags = "2.9.0"
tracing = "0.1.41"

[lints]
workspace = true
