[package]
name = "game_crash_handler"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros" }
game_core = { version = "0.1.0", path = "../game_core" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal", "fs"] }

[lints]
workspace = true
