[package]
name = "game_crash_handler"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []
tracy = ["game_tracing"]

[dependencies]
game_core = { version = "0.1.0", path = "../game_core" }
game_macros = { version = "0.1.0", path = "../game_macros" }
game_tracing = { version = "0.1.0", path = "../game_tracing", features = ["tracy"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }
rustix = { version = "0.38.39", features = ["mm"] }
linux-raw-sys = "0.6.5"

[lints]
workspace = true
