[package]
name = "game_data"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }

bytes = "1.6.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["fs", "io-util"] }
tracing = "0.1.40"
