[package]
name = "game_editor"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
# game_core = { version = "0.1.0", path = "../game_core" }
# game_input = { version = "0.1.0", path = "../game_input" }
game_ui = { version = "0.1.0", path = "../game_ui" }
game_data = { version = "0.1.0", path = "../game_data" }
game_window = { version = "0.1.0", path = "../game_window" }
game_render = { version = "0.1.0", path = "../game_render" }
game_input = { version = "0.1.0", path = "../game_input" }
game_asset = { version = "0.1.0", path = "../game_asset" }
game_scene = { version = "0.1.0", path = "../game_scene" }

bevy_ecs = "0.10.0"
bevy_app = "0.10.0"
parking_lot = "0.12.1"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
image = "0.24.6"
glam = "0.24"
bitflags = "2.2.1"
pretty_env_logger = "0.5.0"
chrono = "0.4.26"

[profile.dev]
opt-level = 0
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = false
lto = "fat"
codegen-units = 1
