[package]
name = "game_editor"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_ui = { version = "0.1.0", path = "../game_ui" }
game_data = { version = "0.1.0", path = "../game_data" }
game_window = { version = "0.1.0", path = "../game_window" }
game_render = { version = "0.1.0", path = "../game_render" }
game_input = { version = "0.1.0", path = "../game_input" }
game_scene = { version = "0.1.0", path = "../game_scene" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }
game_core = { version = "0.1.0", path = "../game_core" }

parking_lot = "0.12.1"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
image = "0.24.6"
glam = "0.24"
pretty_env_logger = "0.5.0"
chrono = "0.4.26"
bitflags = "2.4.0"

[profile.dev]
opt-level = 0
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = false
lto = "fat"
codegen-units = 1
