[package]
name = "game_editor"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_ui = { version = "0.1.0", path = "../game_ui" }
game_data = { version = "0.1.0", path = "../game_data" }
game_window = { version = "0.1.0", path = "../game_window" }
game_render = { version = "0.1.0", path = "../game_render" }
game_input = { version = "0.1.0", path = "../game_input" }
game_scene = { version = "0.1.0", path = "../game_scene" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }
game_core = { version = "0.1.0", path = "../game_core" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }
game_gizmos = { version = "0.1.0", path = "../game_gizmos" }
game_prefab = { version = "0.1.0", path = "../game_prefab" }
game_worldgen = { version = "0.1.0", path = "../game_worldgen" }
game_crash_handler = { version = "0.1.0", path = "../game_crash_handler" }

parking_lot = "0.12.3"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
image = "0.25.1"
glam = "0.28.0"
pretty_env_logger = "0.5.0"
chrono = "0.4.38"
bitflags = "2.6.0"
ahash = "0.8.11"
indexmap = "2.2.6"
