[package]
name = "game_gizmos"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_render = { version = "0.1.0", path = "../game_render" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_core_pipeline = { version = "0.1.0", path = "../game_core_pipeline" }

glam = "0.28.0"
bytemuck = "1.16.1"
parking_lot = "0.12.3"
tracing = "0.1.40"

[lints]
workspace = true
