[package]
name = "game_gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
bytemuck = "1.13.1"
bytes = "1.4.0"
game_render = { version = "0.1.0", path = "../game_render" }
glam = "0.24.0"

gltf = "1.1.0"
image = "0.24.6"
indexmap = "1.9.3"
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"


[[test]]
name = "gltf_box"
path = "tests/gltf_box/gltf_box.rs"

[[test]]
name = "basic_material"
path = "tests/basic_material/basic_material.rs"
