[package]
name = "game_gltf"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
game_render = { version = "0.1.0", path = "../game_render" }
game_common = { version = "0.1.0", path = "../game_common" }
game_core = { version = "0.1.0", path = "../game_core" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
glam = "0.28.0"

gltf = "1.4.1"
image = "0.25.1"
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.40"

[[test]]
name = "gltf_box"
path = "tests/gltf_box/gltf_box.rs"

[[test]]
name = "basic_material"
path = "tests/basic_material/basic_material.rs"

[[test]]
name = "nested_nodes"
path = "tests/nested_nodes/nested_nodes.rs"
