[package]
name = "game_macros"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []
net = []
wasm = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
