[package]
name = "game_model"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
bytes = "1.4.0"
glam = { version = "0.24.1", features = ["bytemuck"] }
bytemuck = "1.13.1"
