[package]
name = "game_model"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
bytes = "1.6.0"
glam = { version = "0.28.0", features = ["bytemuck"] }
bytemuck = "1.16.1"
