[package]
name = "game_net"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros", features = ["net"] }
game_common = { version = "0.1.0", path = "../game_common" }

bytes = "1.3.0"
thiserror = "1.0.38"
glam = "0.22.0"
futures = "0.3.26"
pin-project = "1.0.12"
tokio = { version = "1.25.0", features = ["net", "sync", "time"] }
socket2 = "0.4.7"
bevy_ecs = "0.9.1"
parking_lot = "0.12.1"
tracing = "0.1.37"
