[package]
name = "game_net"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["tracing"]
tracing = []
log-peer-errors = []

[lints]
workspace = true

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros", features = ["net"] }
game_common = { version = "0.1.0", path = "../game_common" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

bytes = "1.6.0"
thiserror = "1.0.61"
glam = "0.28.0"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["net", "sync", "time"] }
parking_lot = "0.12.3"
tracing = "0.1.40"
indexmap = "2.2.6"
rand = "0.8.5"

sha2 = "0.10.8"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }

[[test]]
name = "conn"
path = "tests/conn.rs"
