[package]
name = "game_physics"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

nalgebra = { version = "0.32.1" }
parking_lot = "0.12.1"
rapier3d = "0.17.2"
tracing = "0.1.37"
glam = { version = "0.24.0" }

[features]
default = ["simd"]
simd = ["rapier3d/simd-nightly"]
