[package]
name = "game_physics"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

nalgebra = { version = "0.32.1" }
parking_lot = "0.12.3"
rapier3d = { version = "0.17.2", features = ["simd-stable"] }
tracing = "0.1.40"
glam = { version = "0.28.0" }
