[package]
name = "game_prefab"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

bytes = "1.8.0"

[lints]
workspace = true
