[package]
name = "game_render"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_window = { version = "0.1.0", path = "../game_window" }
game_common = { version = "0.1.0", path = "../game_common" }
game_asset = { version = "0.1.0", path = "../game_asset" }

bytemuck = { version = "1.13.1", features = ["derive"] }
futures-lite = "1.13.0"
glam = { version = "0.24.0", features = ["bytemuck"] }
tracing = { version = "0.1.37", features = ["log-always"] }
wgpu = "0.16.0"
image = "0.24.6"
parking_lot = "0.12.1"
bitflags = { version = "2.3.3", features = ["bytemuck"] }
