[package]
name = "game_render"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[features]
default = []

[dependencies]
game_window = { version = "0.1.0", path = "../game_window" }
game_common = { version = "0.1.0", path = "../game_common" }
game_asset = { version = "0.1.0", path = "../game_asset" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }

bytemuck = { version = "1.13.1", features = ["derive"] }
futures-lite = "1.13.0"
glam = { version = "0.24.0", features = ["bytemuck"] }
tracing = { version = "0.1.37", features = ["log-always"] }
wgpu = "0.19.1"
image = "0.24.6"
parking_lot = "0.12.1"
bitflags = { version = "2.3.3", features = ["bytemuck"] }
slotmap = "1.0.6"
mikktspace = "0.3.0"
tokio = { version = "1.35.1", default-features = false, features = ["sync"] }
thiserror = "1.0.59"

# Used by wgpu.
# Convert spans direclty to tracing, which we use for profiling.
profiling = { version = "1.0.15", features = ["profile-with-tracing"] }
