[package]
name = "game_render_test"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_render = { version = "0.1.0", path = "../game_render" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_common = { version = "0.1.0", path = "../game_common" }
glam = "0.24.0"
futures-lite = "1.13.0"
image = "0.24.8"
tokio = { version = "1.35.1", default-features = false, features = ["sync"] }
clap = { version = "4.4.18", features = ["derive"] }

[lints]
workspace = true
