[package]
name = "game_render_test"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[dependencies]
game_render = { version = "0.1.0", path = "../game_render" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_common = { version = "0.1.0", path = "../game_common" }
glam = "0.28.0"
futures-lite = "2.3.0"
image = "0.25.1"
tokio = { version = "1.38.0", default-features = false, features = ["sync"] }
clap = { version = "4.5.8", features = ["derive"] }

[lints]
workspace = true
