[package]
name = "game_scene"
version = "0.1.0"
edition = "2021"

[features]
default = ["gltf"]
gltf = ["dep:game_gltf"]

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_render = { version = "0.1.0", path = "../game_render" }
game_asset = { version = "0.1.0", path = "../game_asset" }
parking_lot = "0.12.1"
bevy_ecs = "0.10.1"
bevy_app = "0.10.1"

game_core = { version = "0.1.0", path = "../game_core" }
game_gltf = { version = "0.1.0", path = "../game_gltf", optional = true }
tracing = "0.1.37"
