[package]
name = "game_scene"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["gltf"]
gltf = ["dep:game_gltf"]

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_render = { version = "0.1.0", path = "../game_render" }
game_model = { version = "0.1.0", path = "../game_model" }
game_core = { version = "0.1.0", path = "../game_core" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }

game_gltf = { version = "0.1.0", path = "../game_gltf", optional = true }
tracing = "0.1.37"
glam = "0.24.1"
slotmap = "1.0.6"
image = "0.24.7"
