[package]
name = "game_scene2"
version = "0.1.0"
edition = "2021"

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[lints]
workspace = true
